# kmk_firmware

./: .ampy  .dockerignore  .flake8  .gitignore  .gitmodules  .markdownlint.yml  .s3cfg  BOARD_SETUP.md  Dockerfile  Dockerfile_base  LICENSE.md  Makefile  Pipfile  README.md  boot.py  build_kmkpython_release.sh  docker-compose.yml  dockerMakeFile  docker_mpy_build.sh  environment.yml  ffkb.md  kmk_python_Dockerfile  kmkpython_ref.tsv  main.py  micropython.sh  mkdocs.yml  mpy-cross-7  mpy-cross-8  noxfile.py  pyproject.toml  setup.cfg  submodules.toml  terminal.sh  upy-freeze.txt
.circleci/: config.yml
.devcontainer/: devcontainer.json
boards/: klarank.py  noop.py
docs/: 7_segment_display.md  Getting_Started.md  Officially_Supported_Microcontrollers.md  Offiially_Supported_Microcontrollers.md  README.md  adns9800.md  ble_hid.md  bluetooth.md  boot.md  capsword.md  cg_swap.md  combos.md  config_and_keymap.md  contributing.md  debugging.md  dynamic_macros.md  dynamic_sequences.md  easypoint.md  encoder.md  examples.md  extension_keymap_string_keynames.md  extension_statusled.md  extension_stringy_keymaps.md  extensions.md  flashing.md  handwiring.md  hardware.md  i2c_encoder.md  international.md  keycodes.md  keymap.md  keys.md  kmkpython_vs_circuitpython.md  layers.md  leader.md  led.md  lock_status.md  media_keys.md  midi.md  modholdandtap.md  (+28 more)
entrypoints/: feather_nrf52832.py  pyboard_boot.py  teensy31.py
hardware/: LICENSE.md  README-ptBR.md  README.md  itsy_bitsy_to_pro_micro.brd  itsy_bitsy_to_pro_micro.sch
kmk/: ble.py  ble_split.py  bootcfg.py  consts.py  encoder.py  hid.py  (+23 more)
(+782 files in other folders)
