[project]
name = 'kmk_firmware'
dependencies = []
version = '0'
requires-python = '>=3.10'

[project.optional-dependencies]
dev = [
    'flake8==7.0.0',
    'flake8-black',
    'flake8-commas',
    'flake8-comprehensions',
    'flake8-isort',
    'flake8-pyproject',
    'flake8-quotes',
]

[tool.setuptools]
packages = []

[tool.black]
# since black refuses to allow single-quotes...  see locked conversation at
# https://github.com/psf/black/issues/594
skip-string-normalization = true
target-version = ['py36']
include = '''
/(
    boards
    |kmk
    |tests
    |user_keymaps
)/.*\.py
'''

[tool.flake8]
filename = [
    './boards/*.py',
    './kmk/*.py',
    './tests/*.py',
    './user_keymaps/*.py',
]
# match black expectations
max-line-length = 88

# enforce single quotes
docstring-quotes = "'''"
multiline-quotes = "'''"

extend-ignore = [
# manage trailing commas
    'C812', 'C813',
# ignore: comment should start with '# '
    'E262',
# manage line lengths
    'E501',
]

per-file-ignores = [
# Allow misaligned array entries
    'boards/**/*.py: E131',
    'user_keymaps/**/*.py: E131',
]

[tool.isort]
known_standard_library = [
    'analogio',
    'bitbangio',
    'bleio',
    'board',
    'busio',
    'digitalio',
    'framebuf',
    'gc',
    'machine',
    'microcontroller',
    'micropython',
    'neopixel',
    'pulseio',
    'supervisor',
    'usb_hid'
]
profile = 'black'
skip_glob = [
    '!boards/*.py',
    '!kmk/*.py',
    '!tests/*.py',
    '!user_keymaps/*.py',
]
